--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "dependencies": {
     "@fontsource/merriweather": "^4.5.14",
     "@fontsource/montserrat": "^4.5.14",
+    "@mdx-js/mdx": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
     "gatsby": "^5.8.1",
     "gatsby-plugin-feed": "^5.8.0",
+    "gatsby-plugin-feed-mdx": "^1.1.0",
     "gatsby-plugin-image": "^3.8.0",
     "gatsby-plugin-manifest": "^5.8.0",
+    "gatsby-plugin-mdx": "^5.8.0",
     "gatsby-plugin-sharp": "^5.8.1",
     "gatsby-remark-images": "^7.8.0",
     "gatsby-remark-prismjs": "^7.8.0",
