--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@fontsource/merriweather": "^4.5.14",
     "@fontsource/montserrat": "^4.5.14",
+    "autoprefixer": "^10.4.14",
     "gatsby": "^5.8.1",
     "gatsby-plugin-feed": "^5.8.0",
     "gatsby-plugin-image": "^3.8.0",
     "gatsby-plugin-manifest": "^5.8.0",
+    "gatsby-plugin-postcss": "^6.8.0",
     "gatsby-plugin-sharp": "^5.8.1",
     "gatsby-remark-emoji": "^0.0.3",
     "gatsby-remark-images": "^7.8.0",
@@ -22,9 +24,11 @@
     "gatsby-source-filesystem": "^5.8.0",
     "gatsby-transformer-remark": "^6.8.0",
     "gatsby-transformer-sharp": "^5.8.0",
+    "postcss": "^8.4.21",
     "prismjs": "^1.29.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
     "prettier": "^2.8.7"
