--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,8 @@ jobs:
 
       - name: Build
         run: |
-          yarn run build
+          # yarn run build
+          npx gatsby build --prefix-paths
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
