--- a/.gitignore
+++ b/.gitignore
@@ -73,7 +73,7 @@ yarn-error.log
 # !.yarn/cache
 # !.yarn/patches
 # !.yarn/plugins
-# !.yarn/releases
+!.yarn/releases
 # !.yarn/sdks
 # !.yarn/versions
 
