--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "gatsby-plugin-feed": "^5.8.0",
     "gatsby-plugin-image": "^3.8.0",
     "gatsby-plugin-manifest": "^5.8.0",
+    "gatsby-plugin-nprogress": "^5.8.0",
     "gatsby-plugin-postcss": "^6.8.0",
+    "gatsby-plugin-preact": "^7.8.0",
     "gatsby-plugin-sharp": "^5.8.1",
     "gatsby-remark-autolink-headers": "^6.8.0",
     "gatsby-remark-emoji": "^0.0.3",
@@ -28,6 +30,8 @@
     "gatsby-transformer-remark": "^6.8.0",
     "gatsby-transformer-sharp": "^5.8.0",
     "postcss": "^8.4.21",
+    "preact": "^10.13.2",
+    "preact-render-to-string": "^6.0.2",
     "prismjs": "^1.29.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
