--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prismjs": "^1.29.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.8.0",
     "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
