--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.8.0",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.1",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "prettier": "^2.8.7",
