perf: update gatsby to 5.9

--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
     "@fontsource/montserrat": "^4.5.14",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.14",
-    "gatsby": "^5.8.1",
-    "gatsby-plugin-feed": "^5.8.0",
-    "gatsby-plugin-image": "^3.8.0",
-    "gatsby-plugin-manifest": "^5.8.0",
-    "gatsby-plugin-nprogress": "^5.8.0",
-    "gatsby-plugin-postcss": "^6.8.0",
-    "gatsby-plugin-preact": "^7.8.0",
-    "gatsby-plugin-sharp": "^5.8.1",
-    "gatsby-remark-autolink-headers": "^6.8.0",
+    "gatsby": "^5.9.0",
+    "gatsby-plugin-feed": "^5.9.0",
+    "gatsby-plugin-image": "^3.9.0",
+    "gatsby-plugin-manifest": "^5.9.0",
+    "gatsby-plugin-nprogress": "^5.9.0",
+    "gatsby-plugin-postcss": "^6.9.0",
+    "gatsby-plugin-preact": "^7.9.0",
+    "gatsby-plugin-sharp": "^5.9.0",
+    "gatsby-remark-autolink-headers": "^6.9.0",
     "gatsby-remark-emoji": "^0.0.3",
-    "gatsby-remark-images": "^7.8.0",
-    "gatsby-remark-prismjs": "^7.8.0",
-    "gatsby-remark-responsive-iframe": "^6.8.0",
+    "gatsby-remark-images": "^7.9.0",
+    "gatsby-remark-prismjs": "^7.9.0",
+    "gatsby-remark-responsive-iframe": "^6.9.0",
     "gatsby-remark-table-of-contents": "^2.0.0",
-    "gatsby-source-filesystem": "^5.8.0",
-    "gatsby-transformer-remark": "^6.8.0",
-    "gatsby-transformer-sharp": "^5.8.0",
-    "postcss": "^8.4.21",
+    "gatsby-source-filesystem": "^5.9.0",
+    "gatsby-transformer-remark": "^6.9.0",
+    "gatsby-transformer-sharp": "^5.9.0",
+    "postcss": "^8.4.23",
     "preact": "^10.13.2",
     "preact-render-to-string": "^6.0.2",
     "prismjs": "^1.29.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "tailwindcss": "^3.3.1",
     "use-sound": "^4.0.1"
@@ -53,6 +53,7 @@
     "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
   },
   "scripts": {
+    "update:npm": "npm-check-updates -u",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "dev": "gatsby develop",
