--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@fontsource/montserrat": "^4.5.14",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.14",
-    "gatsby": "^5.9.0",
+    "gatsby": "next",
     "gatsby-plugin-feed": "^5.9.0",
     "gatsby-plugin-image": "^3.9.0",
     "gatsby-plugin-manifest": "^5.9.0",
